--- a/package.json
+++ b/package.json
@@ -1,40 +1,52 @@
 {
   "name": "oauth-mock-resource-server",
-  "version": "",
+  "version": "0.0.0",
+  "description": "A mock resource server to test an oauth client",
+  "author": "",
+  "license": "MIT",
   "scripts": {
-    "start": "nodemon index.js",
-    "test": "jest --watch",
-    "lint": "eslint \"*/**/*.{js,ts,tsx}\" --fix"
+    "start": "npm run build && cross-env NODE_ENV=production node dist/server.js",
+    "dev": "cross-env NODE_ENV=development nodemon",
+    "build": "tsc && tsc-alias",
+    "test": "jest --forceExit --detectOpenHandles",
+    "test:watch": "jest --watch",
+    "lint": "eslint --ignore-path .gitignore --ext .ts src/",
+    "lint:fix": "npm run lint -- --fix"
   },
-  "description": "",
   "dependencies": {
+    "axios": "^0.22.0",
+    "config": "^3.3.6",
     "cors": "^2.8.5",
-    "express": "^4.17.1"
+    "dotenv": "^10.0.0",
+    "envalid": "^7.2.1",
+    "express": "^4.17.1",
+    "jsonwebtoken": "^8.5.1",
+    "morgan": "^1.10.0",
+    "ts-node": "^10.0.0",
+    "typescript": "^4.3.5",
+    "winston": "^3.3.3",
+    "winston-daily-rotate-file": "^4.5.5"
   },
   "devDependencies": {
-    "eslint": "^7.28.0",
+    "@types/cors": "^2.8.11",
+    "@types/dotenv": "^8.2.0",
+    "@types/express": "^4.17.13",
+    "@types/jest": "^26.0.24",
+    "@types/jsonwebtoken": "^8.5.4",
+    "@types/node": "^16.0.1",
+    "@types/winston": "^2.4.4",
+    "@typescript-eslint/eslint-plugin": "^4.28.2",
+    "@typescript-eslint/parser": "^4.28.2",
+    "cross-env": "^7.0.3",
+    "eslint": "^7.30.0",
     "eslint-config-prettier": "^8.3.0",
     "eslint-plugin-prettier": "^3.4.0",
-    "jest": "^26.6.3",
-    "prettier": "^2.3.1",
-    "nodemon": "^2.0.13"
-  },
-  "eslintConfig": {
-    "parserOptions": {
-      "ecmaVersion": 2020,
-      "sourceType": "module"
-    },
-    "extends": [
-      "plugin:prettier/recommended"
-    ],
-    "rules": {},
-    "ignorePatterns": []
-  },
-  "prettier": {
-    "semi": true,
-    "trailingComma": "all",
-    "singleQuote": true,
-    "printWidth": 120,
-    "tabWidth": 4
+    "husky": "^7.0.1",
+    "jest": "^27.2.4",
+    "lint-staged": "^11.0.0",
+    "nodemon": "^2.0.9",
+    "prettier": "^2.3.2",
+    "ts-jest": "^27.0.5",
+    "tsconfig-paths": "^3.11.0"
   }
 }
