--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "winston-daily-rotate-file": "^4.5.5"
   },
   "devDependencies": {
+    "@types/config": "^0.0.39",
     "@types/cors": "^2.8.11",
     "@types/dotenv": "^8.2.0",
     "@types/express": "^4.17.13",
