--- a/package.json
+++ b/package.json
@@ -5,13 +5,14 @@
   "author": "",
   "license": "MIT",
   "scripts": {
-    "start": "npm run build && cross-env NODE_ENV=production node dist/server.js",
+    "start": "node dist/server.js",
     "dev": "cross-env NODE_ENV=development nodemon",
     "build": "tsc && tsc-alias",
     "test": "jest --forceExit --detectOpenHandles",
     "test:watch": "jest --watch",
     "lint": "eslint --ignore-path .gitignore --ext .ts src/",
-    "lint:fix": "npm run lint -- --fix"
+    "lint:fix": "npm run lint -- --fix",
+    "docker:build": "docker build -t lizzythelizard/oauth-mock-resource-server:0.1 -t lizzythelizard/oauth-mock-resource-server:latest ."
   },
   "dependencies": {
     "axios": "^0.22.0",
@@ -21,8 +22,8 @@
     "envalid": "^7.2.1",
     "express": "^4.17.1",
     "jsonwebtoken": "^8.5.1",
+    "jwks-rsa": "^2.0.4",
     "morgan": "^1.10.0",
-    "ts-node": "^10.0.0",
     "typescript": "^4.3.5",
     "winston": "^3.3.3",
     "winston-daily-rotate-file": "^4.5.5"
@@ -30,12 +31,10 @@
   "devDependencies": {
     "@types/config": "^0.0.39",
     "@types/cors": "^2.8.11",
-    "@types/dotenv": "^8.2.0",
     "@types/express": "^4.17.13",
-    "@types/jest": "^26.0.24",
+    "@types/jest": "^27.0.2",
     "@types/jsonwebtoken": "^8.5.4",
     "@types/node": "^16.0.1",
-    "@types/winston": "^2.4.4",
     "@typescript-eslint/eslint-plugin": "^4.28.2",
     "@typescript-eslint/parser": "^4.28.2",
     "cross-env": "^7.0.3",
@@ -48,6 +47,8 @@
     "nodemon": "^2.0.9",
     "prettier": "^2.3.2",
     "ts-jest": "^27.0.5",
+    "ts-node": "^10.0.0",
+    "tsc-alias": "^1.3.9",
     "tsconfig-paths": "^3.11.0"
   }
 }
