Better errro messages

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -7,3 +7,9 @@ services:
     environment:
       KEYCLOAK_USER: admin
       KEYCLOAK_PASSWORD: admin
+  mock-server:
+    build: .
+    ports:
+    - "3000:3000"
+    environment:
+      ISSUER: http://keycloak:8080/auth/realms/master
